trunk/Archive2/9a/d41ad6497eeacd/output
main.cpp:5:32: warning: unused parameter 'rhs' [-Wunused-parameter]
void f(tuple<Values...> const& rhs) {}
                               ^
main.cpp:9:5: error: no matching function for call to 'f'
    f(t);
    ^
main.cpp:5:6: note: candidate template ignored: substitution failure [with Values = <>]: too few template arguments for class template 'tuple'
void f(tuple<Values...> const& rhs) {}
     ^ ~~~~~
1 warning and 1 error generated.
